specs/step_2_webapp_and_database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antoniocamas-java-webapp-deployment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: antoniocamas-java-webapp
  replicas: 2 # tells deployment to run N pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: antoniocamas-java-webapp
    spec:
      containers:
      - name: antoniocamas-java-webapp
        image: codeurjc/java-webapp-bbdd:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: antoniocamas-java-webapp
  labels:
    app: antoniocamas-java-webapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: antoniocamas-java-webapp-port
  selector:
    app: antoniocamas-java-webapp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antoniocamas-db-deployment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: antoniocamas-db
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: antoniocamas-db
    spec:
      containers:
      - name: antoniocamas-db
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: antoniocamas-db-storage
      volumes:
      - name: antoniocamas-db-storage
        persistentVolumeClaim:
          claimName: antoniocamas-pvc-1g
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: antoniocamas-db
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: antoniocamas-bbdd-port
  selector:
    app: antoniocamas-db
  type: ClusterIP
