specs/step_3_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: antoniocamas-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: www.antoniocamaswebdomain.com
    http:
      paths:
      - path: /webapp/
        backend:
          serviceName: antoniocamas-java-webapp
          servicePort: 8080
